fix: CORS fully permissive, OPTIONS preflight, public GET endpoints