@@ -3,6 +3,7 @@ package com.restaurant.security;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -15,6 +16,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -30,20 +32,29 @@ public class SecurityConfig {
             .cors(c -> c.configurationSource(corsSource()))
             .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                // Public
-                .requestMatchers("/api/auth/login", "/api/auth/refresh").permitAll()
+                // ── Tout public en OPTIONS (preflight CORS) ──
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                // ── Public ──────────────────────────────────
+                .requestMatchers("/api/auth/login", "/api/auth/refresh", "/api/auth/logout").permitAll()
                 .requestMatchers("/h2-console/**").permitAll()
-                .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/menu").permitAll()
-                .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/tables").permitAll()
-                // Cuisine
+                // ── Menu et tables : lecture publique ────────
+                .requestMatchers(HttpMethod.GET, "/api/menu").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/tables").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/settings").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/settings/categories").permitAll()
+                // ── Cuisine ─────────────────────────────────
                 .requestMatchers("/api/orders/active").hasAnyRole("CUISINE","ADMIN","SERVEUR","CAISSE")
-                .requestMatchers(org.springframework.http.HttpMethod.PATCH, "/api/orders/*/status")
-                    .hasAnyRole("CUISINE","ADMIN")
-                // Admin seulement
-                .requestMatchers("/api/menu/**").hasRole("ADMIN")
-                .requestMatchers("/api/settings/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PATCH, "/api/orders/*/status").hasAnyRole("CUISINE","ADMIN")
+                // ── Admin seulement ──────────────────────────
+                .requestMatchers(HttpMethod.POST,   "/api/menu/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT,    "/api/menu/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/menu/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PATCH,  "/api/menu/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT,    "/api/settings/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.POST,   "/api/settings/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/settings/**").hasRole("ADMIN")
                 .requestMatchers("/api/auth/users/**").hasRole("ADMIN")
-                // Tout le reste : authentifié
+                // ── Tout le reste : authentifié ──────────────
                 .anyRequest().authenticated()
             )
             .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
@@ -52,7 +63,8 @@ public class SecurityConfig {
         return http.build();
     }
 
-    @Bean PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
+    @Bean
+    public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
 
     @Bean
     public AuthenticationManager authenticationManager(
@@ -62,13 +74,15 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsSource() {
-        CorsConfiguration c = new CorsConfiguration();
-        c.setAllowedOriginPatterns(List.of("*"));
-        c.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-        c.setAllowedHeaders(List.of("*"));
-        c.setAllowCredentials(false);
-        UrlBasedCorsConfigurationSource s = new UrlBasedCorsConfigurationSource();
-        s.registerCorsConfiguration("/**", c);
-        return s;
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS","HEAD"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization"));
+        config.setAllowCredentials(false);
+        config.setMaxAge(3600L);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        return source;
     }
 }
